# face-checkin

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SPECS.md  TASKS.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
apps/: image_utils.py
apps/checkin/: admin.py  anomaly.py  apps.py  kiosk_urls.py  kiosk_views.py  matching.py  models.py  urls.py  views.py
apps/checkin/migrations/: 0001_initial.py  0002_add_ip_address_to_checkin.py  0003_add_ip_address_and_user_agent_to_checkin.py
apps/checkin/tests/: test_matching.py  test_views.py
apps/classes/: admin.py  apps.py  forms.py  models.py  signals.py
apps/classes/migrations/: 0001_initial.py  0002_class_shorthand.py  0003_add_ip_address_to_checkin.py  0004_class_owner_class_shared_with_users.py  0005_rename_class_to_course.py
apps/faces/: admin.py  apps.py  models.py  urls.py  views.py
apps/sessions/: admin.py  api_urls.py  apps.py  models.py  urls.py  views.py
docker/: Caddyfile  entrypoint.sh  scheduler.sh
face_checkin/: exception_reporter.py  urls.py  wsgi.py
face_checkin/settings/: base.py  development.py  production.py
plans/: anomaly-detection.md
static/css/: admin-fonts.css  fonts.css  kiosk.css  sessions.css
static/js/: bulk_webcam_capture.js  face-api-utils.js  webcam_capture.js
templates/: 403.html  404.html  base.html  index.html  landing.html  login.html
templates/admin/: base_site.html
templates/checkin/: kiosk.html
templates/sessions/: base.html  index.html  report.html  session_list.html
(+24 files in other folders)
